<resources>
    <string name="app_name">ProjectCakeApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
    <string name="favourite">Yêu thích</string>
    <string name="home">Trang chủ</string>
    <string name="sign_in">Đăng Nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="input_email">Nhập email</string>
    <string name="input_pass">Nhập mật khẩu</string>
    <string name="category">Mua nhiều</string>
    <string name="profile">Profile</string>
    <string name="over_popular_cake">Bánh nổi bật</string>
    <string name="blog">Blog</string>
    <string name="input_re_password">Nhập lại mật khẩu</string>
    <string name="input_user_name">Nhập tên người dùng</string>
    <string name="input_phone">Nhập số điện thoại</string>
    <string name="cart">Giỏ hàng</string>
    <string name="information">Thông tin giỏ hàng</string>

</resources>