<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/favourite"
        android:title="@string/favourite"
        android:icon="@drawable/ic_baseline_favorite_24"/>
    <item
        android:id="@+id/blog"
        android:title="@string/blog"
        android:icon="@drawable/ic_baseline_category_24"/>
    <item
        android:id="@+id/chat"
        android:title="@string/chat"
        android:icon="@drawable/ic_baseline_chat_24"/>
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_person_24"/>

</menu>